--- a/styles/global.scss
+++ b/styles/global.scss
@@ -16,7 +16,7 @@ html {
 
 a {
   text-decoration: none;
-  transition: all 0.1s ease-in-out;
+  transition: all 0.2s cubic-bezier(0, 0, 1, 1) !important;
 }
 
 // PC
@@ -230,6 +230,7 @@ a {
     background: transparent;
     font-weight: 500;
     margin: 0 !important;
+    transition: all 0.2s cubic-bezier(0, 0, 1, 1) !important;
 
     &:hover {
       background-color: rgba(255, 232, 235, 0.3);
@@ -240,6 +241,7 @@ a {
     background: transparent;
     color: #4e5969;
     font-weight: 500;
+    transition: all 0.2s cubic-bezier(0, 0, 1, 1) !important;
 
     &:hover {
       background-color: rgba(255, 232, 235, 0.3);
