--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,17 +1,18 @@
-*:lang(ja) {
-  font-family: "Zen Maru Gothic";
+*:lang(ja),
+html:lang(ja)>body {
+  font-family: "Zen Maru Gothic", ui-sans-serif, system-ui, -apple-system;
 }
 
-*:lang(zh-CN) {
-  font-family: -apple-system, "PingFang SC", "Hiragino Sans GB",
-    "Microsoft YaHei", "WenQuanYi Micro Hei";
+*:lang(zh),
+*:lang(zh-CN),
+html:lang(zh)>body {
+  font-family: Nunito, ui-sans-serif, system-ui, -apple-system, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei";
 }
 
 html {
   -webkit-font-smoothing: antialiased;
   font-family: unset;
-  background: linear-gradient(135deg, #e0f3f8 30%, #ede3f4 50%, #f6e4e9 70%)
-    no-repeat center center fixed;
+  background: linear-gradient(135deg, #e0f3f8 30%, #ede3f4 50%, #f6e4e9 70%) no-repeat center center fixed;
 }
 
 a {
